--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -461,7 +461,7 @@ header {
 .category-img img{
   width: 100%;
 }
-/*Activities Section End */
+/* Categories Section End */
 
 /* Come Teach With us Section Start*/
 .tech-with-us-container{
@@ -869,6 +869,153 @@ header {
 }
 /* For E-hub Section End */
 
+/* Testiminial Section Star */
+.testimonial-wrapper {
+  padding: 4rem 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.testimonial-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 90%;
+  margin: auto;
+  padding: 20px;
+  overflow: hidden; /* Hide overflowing content */
+}
+.testiminial-navigators{
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1.5rem;
+}
+.what-customers-say{
+  line-height: 1;
+}
+.what-customers-say small{
+  font-size: 0.6rem;
+  color: #008BDC;
+}
+.what-customers-say h4{
+  font-size: 1.2rem;
+  font-weight: bolder;
+}
+.navigators-btns{
+  display: flex;
+  align-items: center;
+}
+.navigator-btn {
+  padding: 10px;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  font-weight: bold;
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 48px;
+}
+
+.prev-btn {
+  margin-bottom: 10px;
+}
+
+.next-btn[disabled] {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+.navigator-icon{
+  font-size: 1.3rem;
+}
+.testimonial-cards {
+  display: flex;
+  width: 100%; /* Adjust the width as needed */
+  margin: 0 auto; /* To center the container horizontally */
+  margin-left: -10%; /* Create space on the left side */
+  margin-right: -10%; /* Create space on the right side */
+  transition: transform 0.5s ease; /* Add transition for smooth movement */
+}
+
+.testimonial-card {
+  flex: 0 0 25%;
+  padding: 0.5rem;
+  border-radius: 5px;
+  margin: 0 10px;
+  transition: transform 0.5s ease;
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
+}
+.testiminial-icon{
+  font-size: 2rem;
+  padding: 0.6rem;
+}
+.color-1{
+  color: #D7433D;
+}
+.color-2{
+  color: #19BEEF;
+}
+.color-3{
+  color: #B840D3;
+}
+.color-4{
+  color: #F9A72A;
+}
+.testimonial-card p {
+  font-size: 0.9rem;
+  line-height: 1.3;
+}
+
+.person {
+  margin-top: 1.5rem;
+  display: flex;
+  align-items: center;
+}
+
+.person img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-right: 0.5rem;
+}
+
+.info h4 {
+  margin: 0;
+  font-size: 0.8rem;
+}
+
+.info p {
+  font-size: 0.5rem;
+}
+/* Testiminial Section End */
+
+/* Foter Section Start */
+.footer{
+  display: flex;
+  flex-direction: column;
+  color: #fff;
+  align-items: center;
+  padding: 2rem 0;
+  background-color: #000;
+}
+.footer h4{
+  font-size: 0.9rem;
+  margin-bottom: 0.7rem;
+  font-weight: 400;
+}
+.social-media{
+  margin-bottom: 4rem;
+}
+.social-media ion-icon{
+  font-size: 2.4rem;
+  cursor: pointer;
+}
+.footer p{
+  font-size: 0.7rem;
+}
+/* Foter Section End*/
+
 @media screen and (max-width: 1022px) {
   /* Header Styles */
   header {
@@ -978,50 +1125,529 @@ header {
     color: #0A1931;
   }
   /* Hero Section Start*/
-.hero-container{
-  flex-direction: column;
-}
-.hero-title{
-  width: 90%;
-  /* max-width: 500px; */
-  /* margin: 0 auto; */
+  .hero-container{
+    flex-direction: column;
+  }
+  .hero-title{
+    width: 90%;
+    /* max-width: 500px; */
+    /* margin: 0 auto; */
 
-  margin: 7rem auto;
-}
-.hero-title h1{
-  font-size: 2rem;
-  font-weight: bolder;
-  margin-top: 4rem;
-}
-.btn-hero{
-  margin-top: 2rem;
-}
-.btn-hero a{
- display: inline-block;
-}
-.hero-image-container{
-  width: 100%;
-  background-size: contain;
+    margin: 7rem auto;
+  }
+  .hero-title h1{
+    font-size: 2rem;
+    font-weight: bolder;
+    margin-top: 4rem;
+  }
+  .btn-hero{
+    margin-top: 2rem;
+  }
+  .btn-hero a{
+  display: inline-block;
+  }
+  .hero-image-container{
+    width: 100%;
+    background-size: contain;
 
-  /* border: 1px solid red; */
-}
-/* Style for the laptop frame */
-.laptop-frame{
-  max-width: 700px;
-  width: 400px; /*Set your preferred width*/
-  top: 70%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+    /* border: 1px solid red; */
+  }
+  /* Style for the laptop frame */
+  .laptop-frame{
+    max-width: 700px;
+    width: 400px; /*Set your preferred width*/
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    
+  }
+  /* Style for the image inside the content */
+  .hero-img img {
+    width: 66%;
+    height: 39%;
+    max-width: 100%;
+    max-height: 100%;
+  }
+  /* Hero Section End*/
+
+  /* For Students Start */
+  .for-student-container{
+    flex-direction: column;
+    width: 100%;
+  }
+  .student-desc-container{
+    width: 90%;
+  }
   
-}
+  .student-desc{
+    width: 100%;
+    max-width: 600px;
+    margin: 0 auto;
+  }
+  .student-desc h3{
+    font-size: 1.8rem;
+    font-weight: bolder;
+  }
+  .student-desc p{
+    font-size: 0.9rem;
+  }
+  
+  .student-link a{
+   padding: 0.5rem 1rem;
+   font-size: 0.9rem;
+  }
+  .rank-container{
+    width: 100%;
+    margin-top: 8rem;
+    padding-bottom: 1.5rem;
+    flex-wrap: wrap;
+  }
+  
+  .rank{
+    margin-top: 1rem;
+  }
+  /* For Students End */
+  /* Colaborative Section Start */
+  .colaborative-container{
+    width: 100%;
+    padding: 2rem;
+  }
+  .learning-container h2,
+  .courses-container h2{
+    font-size: 1.3rem;
+    margin-bottom: 1.5rem;
+  }
+  .learning{
+    margin-bottom: 0.6rem;
+  }
+  .learning-icon{
+    font-size: 0.9rem;
+  }
 
+  .learning span{
+    font-size: 0.9rem;
+  }
+  .courses-container{
+    margin-top: 3rem;
+  }
 
-/* Style for the image inside the content */
-.hero-img img {
-  width: 66%;
-  height: 39%;
-  max-width: 100%;
-  max-height: 100%;
-}
-/* Hero Section End*/
+  .courses {
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .course-row{
+    margin: 0.1rem 0;
+  }
+  .course-img{
+    width: 50px;
+  }
+  /* Colaborative Section End */
+  /* Seclect Your Path  Star*/
+  .path-container{
+    width: 100%;
+    margin: 0 auto;
+    padding: 2rem 0;
+  }
+  .path-container h2{
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+  }
+  .path-container p{
+    font-size: 0.9rem;
+  }
+
+  .path-cards{
+    width: 90%;
+    flex-direction: column;
+  }
+  .card{
+    width: 100%;
+    display: flex;
+    margin-bottom: 1rem;
+    background-color: #fff;
+    border-radius: 5px;
+    padding: 1rem 0 0 1rem;
+  }
+  /* Seclect Your Path  End*/
+  /* Categories Section Start */
+  .categories{
+    flex-wrap: wrap;
+    width: 80%;
+  }
+
+  .category-card{
+    width: 40%;
+    margin-bottom: 1rem;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+  }
+  /* Categoies Section End */
+  /* Come Teach With us Section Start*/
+  .tech-with-us-container{
+    width: 100%;
+    flex-direction: column;
+  }
+  .teach-img{
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+  }
+  .teach-desc{
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .teach-desc h2{
+    width: 100%;
+    font-size: 2rem;
+    font-weight: bolder;
+    text-align: center;
+    color: #fff;
+    line-height: 1;
+    margin: 2rem 0;
+  }
+  .teach-desc p{
+    font-size: 0.9rem;
+    color: #fff;
+    font-weight: 100;
+  }
+  .teach-link{
+    margin: 1rem 0;
+  }
+  /* Come Teach With us Section End*/
+  /* Why tech with us Start */
+  .why-teach-container{
+    padding: 2rem 0;
+  }
+  .why-teach-cards{
+    width: 90%;
+    padding: 1rem;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+  .why-row{
+    width: 100%;
+    max-width: 300;
+  }
+  .why-us-card{
+    padding: 2rem 1rem;
+    text-align: center;
+    /* margin: 1rem; */
+    
+  }
+  .why-us-card h2{
+    width: 100%;
+    font-size: 1.4rem;
+  }
+  .why-us-card p{
+    width: 60%;
+    max-width: 500px;
+    margin: 0 auto;
+    font-size: 0.9rem;
+  }
+  /* Why tech with us End */
+  /* Get Start Section Start */
+  .get-start-container h2{
+    margin-bottom: 1.3rem;
+  }
+  .get-start-cards{
+    width: 100%;
+    margin: 0 auto;
+  }
+  .get-start-card{
+    width: 35%;
+    margin-bottom: 1rem;
+  }
+  .get-start-card h3{
+    font-size: 1rem;
+    font-weight: 500;
+  }
+  .get-start-card h4{
+    margin-bottom: 0.5rem;
+    font-size: 0.9rem;
+  }
+  .get-start-card p{
+    font-size: 0.8rem;
+  }
+  .get-start-btn{
+    padding: 0.5rem 1.5rem;
+    background-color: #fff;
+  }
+  /* Get Start Section End */
+  /* Business section Start */
+  .for-business-container{
+    flex-direction: column;
+    width: 100%;
+    margin: 0 auto;
+  }
+  .business-img{
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+  }
+  .business-desc{
+    width: 90%;
+    margin: 1rem auto;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .business-desc h2{
+    font-size: 1.4rem;
+  }
+  .business-desc p{
+    width: 100%;
+    max-width: 600px;
+    margin: 0 auto;
+    font-size: 0.9rem;
+    text-align: justify;
+    line-height: 2;
+  }
+  .our-business-list{
+    width: 100%;
+    max-width: 600px;
+    margin: 0 auto;
+    font-size: 0.8rem;
+  }
+  /* Business section End */
+
+  /* Employee Section Start */
+
+  .employee-cards{
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .employee-card{
+    width: 80%;
+    max-width: 500px;
+    padding: 1rem;
+    margin: 0 auto;
+    margin-bottom: 1.5rem;
+    box-shadow: rgb(247, 247, 252) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  }
+  .employee-link{
+    margin-top: 1rem;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+  }
+  .employee-icons{
+    width: 80%;
+    margin: 0 auto;
+    margin-top: 6rem;
+    display: flex;
+    justify-content: center;
+  }
+  .employee-icon{
+    width: 25%;
+    display: flex;
+    align-items: center;
+    margin-right: 1rem;
+    border-right: 1px solid #fff;
+  }
+  .employee-icon:nth-child(4n) {
+    border-right: none
+  }
+  .emp-icon{
+    margin-right: 0.5rem;
+    font-size: 1.5rem;
+    color: #FFD202;
+  }
+  .icon-desc h2{
+    font-size: 1rem;
+  }
+  .icon-desc p{
+    font-size: 0.6rem;
+    /* border: 1px solid red; */
+  }
+  /* Employee Section End */
+  /* For College Section Start */
+  .for-college-container{
+    padding: 2rem 0;
+  }
+  .for-college{
+    width: 90%;
+    max-width: 600px;
+    padding: 3rem 0;
+  }
+  .for-college h2{
+    font-size: 1.4rem;
+  }
+  .for-college-link{
+    margin-top: 2rem;
+  }
+  .college-btn{
+    font-size: 0.8rem;
+    padding: 1rem 2rem;
+  }
+  /* For College Section End */
+
+  /* College activities Section Start */
+  .activities-cards{
+    width: 100%;
+  }
+  .activity-card{
+    width: 100%;
+    max-width: 600px;
+    margin: 0 auto;
+    flex-direction: column;
+  }
+  .activity-img{
+    width: 100%;
+    margin-top: auto;
+  }
+  .activity-img img{
+    width: 100%;
+  }
+  .activity-desc{
+    width: 100%;
+    margin: 0 auto;
+    padding: 0.5rem;
+  }
+  .order-2{
+    order: -1;
+  }
+  .activity-desc h4{
+    font-size: 0.9rem;
+    font-weight: 400;
+    margin-bottom: 0.5rem;
+  }
+  .activity-desc p{
+    font-size: 0.8rem;
+    text-align: justify;
+    line-height: 1.8;
+  }
+  .activity-link{
+    margin-top: 0.6rem;
+    display: flex;
+    align-items: center;
+  }
+  .activity-btn,
+  .activity-icon{
+    display: inline-block;
+    font-size: 0.8rem;
+    color: #FFD202;
+  }
+  /* College activities Section End */
+
+  /* For E-hub Section Start */
+  .hub-container{
+    padding: 2rem 0;
+  }
+  .hub-cards{
+    width: 90%;
+    max-width: 600px;
+    margin: 0 auto;
+    flex-direction: column;
+  }
+  .hub-order{
+    order: 1;
+  }
+  .hub-img{
+    width: 100%;
+  }
+  .hub-img img{
+    width: 100%;
+  }
+  .hub-desc{
+    width: 100%;
+  }
+  .hub-desc h2{
+    margin: 1rem 0;
+  }
+  .hub-desc p{
+    font-size: 0.8rem;
+    text-align: justify;
+  }
+  .hub-btn{
+    color: #000;
+    font-size: 0.8rem;
+    display: inline-block;
+    background-color: #fff;
+    border-radius: 5px;
+    padding: 0.5rem 2rem;
+  }
+  /* For E-hub Section End */
+  /* Testiminial Section Star */
+  .testimonial-wrapper {
+    padding: 2rem 0;
+    flex-direction: column;
+  }
+
+  .testimonial-container {
+    width: 100%;
+  }
+  .testiminial-navigators{
+    width: 90%;
+  }
+  .what-customers-say{
+    line-height: 1;
+  }
+  .what-customers-say small{
+    font-size: 0.7rem;
+  }
+  .what-customers-say h4{
+    font-size: 1rem;
+  }
+  .navigator-icon{
+    font-size: 1rem;
+  }
+  .testimonial-cards {
+    display: flex;
+    width: 100%; /* Adjust the width as needed */
+    margin: 0 auto; /* To center the container horizontally */
+    margin-left: -20%; /* Create space on the left side */
+    margin-right: -20%; /* Create space on the right side */
+    transition: transform 0.5s ease; /* Add transition for smooth movement */
+  }
+
+  .testimonial-card {
+    flex: 0 0 30%;
+  }
+  .testiminial-icon{
+    font-size: 1.5rem;
+  }
+  .testimonial-card p {
+    font-size: 0.7rem;
+    line-height: 1.3;
+  }
+  /* Testiminial Section End */
+
+  /* Foter Section Start */
+  .footer{
+    display: flex;
+    flex-direction: column;
+    color: #fff;
+    align-items: center;
+    padding: 2rem 0;
+    background-color: #000;
+  }
+  .footer h4{
+    font-size: 0.9rem;
+    margin-bottom: 0.7rem;
+    font-weight: 400;
+  }
+  .social-media{
+    margin-bottom: 4rem;
+  }
+  .social-media ion-icon{
+    font-size: 2rem;
+    cursor: pointer;
+  }
+  .footer p{
+    font-size: 0.7rem;
+  }
+  /* Foter Section End*/
+
 }
